Add automatic theme selection #67
- Update and unify the dark & light themes in all 3 css files
- Move theme process into documentReadyAndLocalisedAsPromised that all pages use
- Refine shortcuts page layout
- Modernize the font stack
- Update en messages file
- Replaces #234

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -99,6 +99,7 @@
     "html_options_suspend_theme": { "message": "Theme" },
     "html_options_suspend_theme_light": { "message": "Light" },
     "html_options_suspend_theme_dark": { "message": "Dark" },
+    "html_options_suspend_theme_system": { "message": "Automatic" },
     "html_options_suspend_screen_capturing": { "message": "Screen capturing" },
     "html_options_suspend_screen_capturing_disabled": { "message": "Disabled" },
     "html_options_suspend_screen_capturing_screen_only": { "message": "Capture top of screen only" },
