Update shortcuts page to fix the default action
This "fix" is needed because Manifest V3 changes the command name for
the default extension popup.  The original extension suppressed this
command entirely, but the migration to V3 re-enabled it due to the name
change.

This update sorta merges the two worlds.  The shortcut is displayed,
because Chrome's settings will display it too, but we give it a proper
i18n value.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -265,6 +265,7 @@
     "js_update_confirm": { "message": "You have not saved a backup yet. Update the extension anyway?" },
     "js_update_button_export": { "message": "Save backup" },
     "js_update_button_reload": { "message": "Update extension now" },
+    "js_shortcuts_default_command": { "message": "Active the extension ( show popup )" },
     "js_shortcuts_not_set": { "message": "not set" },
     "js_session_save_point": { "message": "Automatic save point for v" }
 }
